# GKF

./: CMakeLists.txt  README.md
cmake/: FindCoreFoundation.cmake
inc/: Base.h  Exceptions.h  LocaleFile.h  Locales.h  Translation.h
src/: Exceptions.cpp  LocaleFile.cpp  Locales.cpp  Translation.cpp
src/Darwin/: DarwinLocales.mm
